# FLAMEGPU2-CINECA

./: CMakeLists.txt  README.md  build.sh  profile-concurrency.sh  profile.sh
boids_bruteforce/: main.cu
boids_rtc_bruteforce/: main.cu
boids_rtc_spatial3D/: main.cu
boids_rtc_spatial3D_soa/: main.cu
boids_rtc_spatial3D_sorted/: main.cu
boids_spatial3D/: main.cu
boids_spatial3D_rdc_off/: main.cu
boids_spatial3D_rdc_off_bf/: main.cu
boids_spatial3D_rdc_off_sorted/: main.cu
boids_spatial3D_soa/: main.cu
boids_spatial3D_sorted/: main.cu
cmake/: flamegpu2.cmake
concurrency-msg/: main.cu
concurrency-msg-birth-death/: main.cu
